# TradingTool-2

./: .env.example  .gitignore  Architecture Decision Record.md  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  vite.config.js
SKILLS/: ArchitectureSkill.md
assets/: index-BJKjAEA6.js  script.js  styles.css
docs/: service-run.md  telegram-bot-testing.md  telegram-webhook-setup.md
scripts/: run-poetry.sh
src/: main.py
src/infrastructure/supabase/: __init__.py  client.py  config.py  models.py
src/infrastructure/telegram/: __init__.py  client.py  config.py  models.py  module.py
src/presentation/api/: __init__.py  telegram_webhook_app.py
src/presentation/cli/: supabase_cli.py  telegram_cli.py  telegram_webhook_cli.py
web/: App.jsx  main.jsx
